added @export to distances

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(central_feature)
 export(central_feature2pts)
 export(centre_min_dis)
 export(cos_d)
+export(distances)
 export(mean_centre)
 export(median_centre)
 export(sd_box)
