--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,11 +10,10 @@ Authors@R:
 Date: 2020-02-28
 Maintainer: Gabriel Gaona <gabo@gavg712.com>
 Description: sfcentral package is a collection of functions for computing 
-    centrographic statistics (e.g., standard distance, standard deviation 
+    centrographic statistics (central points, standard distance, standard deviation 
     ellipse, standard deviation box) for observations taken at point locations 
     in 2D or 3D. The sfcentral library was inspired in aspace package but 
-    conceived to be used in a tidy*-sf context, (e.g in `dplyr::groupy_by`, 
-    `dplyr::summarise`, `dplyr::mutate`, etc, contexts).
+    conceived to be used in a spatial tidyverse context.
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
