replace deprecated funcions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,7 @@ export(st_sd_distance)
 export(st_sd_ellipse)
 importFrom(Hmisc,wtd.var)
 importFrom(geodist,geodist)
-importFrom(lwgeom,st_perimeter)
+importFrom(lwgeom,st_perimeter_lwgeom)
 importFrom(scales,rescale)
 importFrom(sf,st_area)
 importFrom(sf,st_buffer)
