--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: sfcentral
 Title: Spatial Centrality and Dispersion Statistics
-Version: 0.1.0
+Version: 0.1.1
 Authors@R: 
     person(given = "Gabriel V.",
            family = "Gaona",
@@ -9,7 +9,7 @@ Authors@R:
            comment = c(ORCID = "0000-0003-4666-2248"))
 Date: 2024-03-11
 Maintainer: Gabriel V. Gaona <gabo@gavg712.com>
-Description: Computing centrographic statistics (central points, standard 
+Description: Compute centrographic statistics (central points, standard 
     distance, standard deviation ellipse, standard deviation box) for 
     observations taken at point locations in 2D or 3D. The 'sfcentral' library 
     was inspired in 'aspace' package but conceived to be used in a spatial
